--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Meine tolle Smartphone-BANK",
   "main": "server.js",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "nodemon": "^1.18.10"
